--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,8 +1,7 @@
 @charset "UTF-8";
 html, body, ul, ol {
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 /*desktop*/
 @media screen and (min-width: 1080px) {
@@ -19,34 +18,34 @@ html, body, ul, ol {
     background-position: center;
     background-size: cover;
     border-radius: 10px 10px 10px 10px;
-    /*ISO EHKÄ */
+    /*ISO EHK├ä */
     min-width: 950px;
     max-width: 1300px;
-    box-shadow: 0px 5px 50px 15px #7c8b88;
-  }
+    box-shadow: 0px 5px 50px 15px #7c8b88; }
 
   .homelinktext {
     display: none;
     margin-left: 20px;
     font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: 45px;
-    color: wheat;
-  }
+    color: wheat; }
 
   .logo_container {
-    background-color: rgba(179, 154, 139, 0.75);
+    background-image: url("logobackground.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
     margin: auto;
     margin-left: 0px;
-    width: 173.75px;
-  }
-  .logo_container img {
-    max-width: 15rem;
-    max-height: 10rem;
-  }
+    width: 173.75px; }
+    .logo_container img {
+      max-width: 15rem;
+      max-height: 10rem; }
+
+  .logo_container:hover {
+    background-color: blue; }
 
   .nav_button_div {
-    display: none;
-  }
+    display: none; }
 
   .nav_links_container {
     margin: auto;
@@ -56,34 +55,28 @@ html, body, ul, ol {
     justify-content: space-between;
     flex-direction: row;
     width: 100%;
-    max-width: 1300px;
-  }
+    max-width: 1300px; }
 
   .link_div a {
     font-size: 1.35rem;
     font-family: "Lato", sans-serif;
     color: #e1dad3;
     text-decoration: none;
-    padding: 5px;
-  }
+    padding: 5px; }
 
   .inner_link_div {
     position: absolute;
     background-color: #748D88;
     display: flex;
-    flex-direction: column;
-  }
-  .inner_link_div a {
-    font-size: 1.25rem;
-    color: white;
-    padding: 6px 6px;
-  }
+    flex-direction: column; }
+    .inner_link_div a {
+      font-size: 1.25rem;
+      color: white;
+      padding: 6px 6px; }
 
   /*add this style class to clicked link*/
   .active_link {
-    background-color: #c8e2dd;
-  }
-}
+    background-color: #c8e2dd; } }
 /*-------------------------------mobile----------------------------------------*/
 @media screen and (max-width: 1080px) {
   nav {
@@ -91,32 +84,27 @@ html, body, ul, ol {
     top: 0px;
     overflow: hidden;
     display: block;
-    background: linear-gradient(to right, #748D88, #557570, #557570);
-  }
+    background: linear-gradient(to right, #748D88, #557570, #557570); }
 
   nav a {
     float: left;
     display: block;
     color: #FFFFFF;
     text-decoration: none;
-    font-size: 2.4rem;
-  }
+    font-size: 2.4rem; }
 
   .homelinktext {
-    display: none;
-  }
+    display: none; }
 
   .logo_container {
     float: left;
     display: inline;
     width: 8rem;
     height: 8rem;
-    margin: 0.2rem 1.8rem 0.1rem 1.8rem;
-  }
-  .logo_container img {
-    max-width: 100%;
-    max-height: 100%;
-  }
+    margin: 0.2rem 1.8rem 0.1rem 1.8rem; }
+    .logo_container img {
+      max-width: 100%;
+      max-height: 100%; }
 
   .nav_button_div {
     height: 100%;
@@ -126,8 +114,7 @@ html, body, ul, ol {
     color: #254741;
     padding: 2rem 2rem;
     /* temp solution*/
-    margin-top: 10px;
-  }
+    margin-top: 10px; }
 
   .nav_links_container {
     position: fixed;
@@ -135,16 +122,13 @@ html, body, ul, ol {
     /*Adjust this for drop down menu to appear right below the navbar*/
     top: 8.1rem;
     display: flex;
-    flex-direction: column;
-  }
+    flex-direction: column; }
 
   .link_div {
-    background-color: #557570;
-  }
-  .link_div a {
-    font-size: 1.35rem;
-    padding: 6px 8px;
-  }
+    background-color: #557570; }
+    .link_div a {
+      font-size: 1.35rem;
+      padding: 6px 8px; }
 
   .inner_link_div {
     position: fixed;
@@ -152,56 +136,44 @@ html, body, ul, ol {
     left: 9rem;
     background-color: #748D88;
     display: flex;
-    flex-direction: column;
-  }
-  .inner_link_div a {
-    font-size: 1.25rem;
-    padding: 6px 6px;
-  }
+    flex-direction: column; }
+    .inner_link_div a {
+      font-size: 1.25rem;
+      padding: 6px 6px; }
 
   /*add this style class to clicked link*/
   .active_link {
-    background-color: #c8e2dd;
-  }
-}
+    background-color: #c8e2dd; } }
 .field_div {
   display: flex;
-  flex-direction: column;
-}
-.field_div input {
-  border-radius: 6px;
-}
+  flex-direction: column; }
+  .field_div input {
+    border-radius: 6px; }
 
 .help_text {
   font-size: 12px;
-  color: #803526;
-}
+  color: #803526; }
 
 .form_field {
-  height: 1.4rem;
-}
+  height: 1.4rem; }
 
 .valid_field {
-  border: 1px solid #458044;
-}
+  border: 1px solid #458044; }
 
 .invalid_field {
-  border: 1px solid #ff696d;
-}
+  border: 1px solid #ff696d; }
 
 .errorlist {
   list-style-type: None;
   font-size: 15px;
-  color: #803526;
-}
+  color: #803526; }
 
 .form_button {
   margin-top: 1rem;
   background-color: #557570;
   border: 2px solid #3D615B;
   border-radius: 0.4rem;
-  padding: 0.6rem 1rem;
-}
+  padding: 0.6rem 1rem; }
 
 .images_flex_container {
   display: flex;
@@ -215,8 +187,7 @@ html, body, ul, ol {
   padding: 0 5px 5px 5px;
   min-width: 944px;
   max-width: 1300px;
-  border-radius: 10px 10px 10px 10px;
-}
+  border-radius: 10px 10px 10px 10px; }
 
 .image_div {
   display: inline-flex;
@@ -227,19 +198,17 @@ html, body, ul, ol {
   border-radius: 1rem;
   overflow: hidden;
   max-width: 450px;
-  object-fit: contain;
-}
-.image_div img {
-  /*prevents image from stretching when using small screen*/
-  display: block;
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  object-fit: contain;
-}
+  object-fit: contain; }
+  .image_div img {
+    /*prevents image from stretching when using small screen*/
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    object-fit: contain; }
 
 .image_div_mouseover {
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
   margin: 25px;
   background-color: #c3d3d0;
@@ -248,16 +217,14 @@ html, body, ul, ol {
   border-radius: 1rem;
   overflow: hidden;
   max-width: 450px;
-  object-fit: contain;
-}
-.image_div_mouseover img {
-  /*prevents image from stretching when using small screen*/
-  display: block;
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  object-fit: contain;
-}
+  object-fit: contain; }
+  .image_div_mouseover img {
+    /*prevents image from stretching when using small screen*/
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    object-fit: contain; }
 
 .paginator_container {
   display: flex;
@@ -267,8 +234,7 @@ html, body, ul, ol {
   height: 40px;
   margin: auto;
   margin-bottom: 25px;
-  border: 1px solid black;
-}
+  border: 1px solid black; }
 
 .image_div_margin {
   /*NOT IN USE*/
@@ -280,20 +246,17 @@ html, body, ul, ol {
   border-radius: 1rem;
   overflow: hidden;
   max-width: 450px;
-  object-fit: contain;
-}
-.image_div_margin img {
-  /*prevents image from stretching when using small sceen*/
-  display: block;
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  object-fit: contain;
-}
+  object-fit: contain; }
+  .image_div_margin img {
+    /*prevents image from stretching when using small sceen*/
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    object-fit: contain; }
 
 .image_header {
-  margin: auto;
-}
+  margin: auto; }
 
 /*style for large image div*/
 .large_image_background {
@@ -304,8 +267,7 @@ html, body, ul, ol {
   background-color: rgba(0, 0, 0, 0.5);
   display: none;
   padding: 0;
-  margin: 0;
-}
+  margin: 0; }
 
 .large_image_div {
   position: relative;
@@ -314,8 +276,7 @@ html, body, ul, ol {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
-}
+  text-align: center; }
 
 .large_img_imgcontainer {
   position: relative;
@@ -324,17 +285,15 @@ html, body, ul, ol {
   margin: auto;
   margin-bottom: 0;
   padding: 0;
-  top: 3%;
-}
-.large_img_imgcontainer img {
-  object-fit: contain;
-  max-width: 80vw;
-  max-height: 80vh;
-  border: 0.2rem solid #3d4c49;
-  border-radius: 1rem;
-  margin: 0;
-  padding: 0;
-}
+  top: 3%; }
+  .large_img_imgcontainer img {
+    object-fit: contain;
+    max-width: 80vw;
+    max-height: 80vh;
+    border: 0.2rem solid #3d4c49;
+    border-radius: 1rem;
+    margin: 0;
+    padding: 0; }
 
 .large_image_texbox {
   max-width: 80vw;
@@ -343,15 +302,35 @@ html, body, ul, ol {
   border-radius: 1rem;
   padding: 0;
   margin: auto;
-  margin-top: 15px;
-}
+  margin-top: 15px; }
 
 .close_image_icon {
   background-color: whitesmoke;
   float: right;
   margin-right: 200px;
-  top: 15px;
-}
+  top: 15px; }
+
+/*single img css*/
+.single_img_cont {
+  text-align: center;
+  max-height: 80%;
+  max-width: 80%;
+  margin: auto;
+  margin-top: 1rem;
+  margin-bottom: 1rem; }
+
+.single_img_div {
+  display: inline-block;
+  align: center;
+  background-color: rgba(179, 154, 139, 0.75);
+  margin: auto;
+  text-align: center;
+  justify-content: center;
+  max-width: 80vw; }
+  .single_img_div img {
+    max-width: 80vw;
+    max-height: 80vh;
+    object-fit: contain; }
 
 /*same style as image_div, diff class for no onclick*/
 .market_div {
@@ -363,58 +342,49 @@ html, body, ul, ol {
   border-radius: 1rem;
   overflow: hidden;
   max-width: 450px;
-  object-fit: contain;
-}
-.market_div img {
-  /*prevents image from stretching when using small screen*/
-  display: block;
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  object-fit: contain;
-}
+  object-fit: contain; }
+  .market_div img {
+    /*prevents image from stretching when using small screen*/
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    object-fit: contain; }
 
 /*single page market object container*/
 .market_big_div {
-  margin: auto;
-}
+  margin: auto; }
 
 .tinymce_div {
   max-width: 100vw;
-  margin: 0px;
-}
-.tinymce_div img {
-  max-width: 100%;
-}
+  margin: 0px; }
+  .tinymce_div img {
+    max-width: 100%; }
+  .tinymce_div p:empty {
+    display: none; }
 
 #kartta_div {
-  height: 1000px;
-}
+  height: 1000px; }
 
 body {
   background-color: rgba(71, 148, 226, 0.84);
-  font-family: "Heebo", sans-serif;
-  font-size: 1.25rem;
-}
+  font-family: 'Heebo', sans-serif;
+  font-size: 1.25rem; }
 
 .content_div {
-  margin: auto 2rem;
-}
-.content_div img {
-  max-width: 95%;
-  object-fit: contain;
-}
+  margin: auto 2rem; }
+  .content_div img {
+    max-width: 95%;
+    object-fit: contain; }
 
 .maindiv {
-  margin: 0;
-}
+  margin: 0; }
 
 /*desktop*/
 @media screen and (min-width: 1080px) {
   .maindiv {
     margin: auto;
-    display: block;
-  }
+    display: block; }
 
   .content_div {
     margin: auto;
@@ -423,10 +393,8 @@ body {
     background-color: rgba(179, 154, 139, 0.75);
     padding: 0 15px 0 15px;
     border-radius: 10px 10px 10px 10px;
-    /*ISO EHKÄ */
+    /*ISO EHK├ä */
     min-width: 944px;
-    max-width: 1300px;
-  }
-}
+    max-width: 1300px; } }
 
 /*# sourceMappingURL=style.css.map */
