--- a/static/css/_tinymce.scss
+++ b/static/css/_tinymce.scss
@@ -1,8 +1,13 @@
 .tinymce_div {
   max-width: 100vw;
   margin: 0px;
+  padding: 20px;
   img {
     max-width: 100%;
+  }
+
+  p{
+    margin: 0;
   }
 
   p:empty {
