--- a/static/css/_market.scss
+++ b/static/css/_market.scss
@@ -24,6 +24,9 @@ $margin-size: 25px;
     }
 }
 
+.market_div_mouseover {
+  box-shadow: 5px 8px 10px #72a26f;
+}
 /*single page market object container*/
 .market_big_div {
   margin: auto;
