--- a/templates/all_markkina.html
+++ b/templates/all_markkina.html
@@ -2,13 +2,14 @@
 {%  load fb_versions %}
 
 {% block content %}
-     <h2><a href="{% url 'uusi_markkina' %}">Uusi ilmoitus</a></h2>
+    <div class="content_div">
+    <h2 align="center"><a href="{% url 'uusi_markkina' %}">Uusi ilmoitus</a></h2>
     <div class="images_flex_container">
     {% for ilmo in kaikki_ilmoitukset %}
         <a href="{% url 'markkina' ilmoitus_pk=ilmo.pk %}">
         <div class="market_div">
             <h3>{{ ilmo.otsikko }}</h3>
-            <span>{{ ilmo.ilmoitustyyppi }}</span>
+            <span>{{ ilmo.get_ilmoitustyyppi_display }}</span>
             <span>{{ ilmo.pvm }}</span>
             <img src="{{ ilmo.thumbnail.url }}" id="{{ ilmo.pk }}">
             <span>{{ ilmo.teksti }}</span>
@@ -16,5 +17,6 @@
         </div>
         </a>
     {% endfor %}
+    </div>
     </div>
 {% endblock %}
