--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -14,7 +14,7 @@
         </div>
         <div class="nav_links_container">
             <div class="link_div"><a href="#" id="ajankohtaista_a">Ajankohtaista</a>
-                <div class="inner_link_div" id="ajankohtaista_div">
+                <div class="inner_link_container" id="ajankohtaista_div">
                     <!-- get links for 5 latest ajankohtaista objects with includetag -->
 					{% show_ak ajankohtaista %}
                     <div class="inner_link"><a href="{% url 'ajankohtaista' %}">Näytä lisää</a></div>
@@ -22,7 +22,7 @@
             </div>
             <div class="link_div"><a href="#" id="tapahtumat_a">Tapahtumat</a>
                 <!-- create links here in loop -->
-                <div class="inner_link_div" id="tapahtumat_div">
+                <div class="inner_link_container" id="tapahtumat_div">
                     {% show_tapahtuma tapahtuma %}
                     <div class="inner_link"><a href="{% url 'tapahtumat' %}">Näytä lisää</a></div>
                 </div>
