--- a/static/css/_market.scss
+++ b/static/css/_market.scss
@@ -29,5 +29,21 @@ $margin-size: 25px;
 }
 /*single page market object container*/
 .market_big_div {
+  text-align: center;
+  justify-content: center;
   margin: auto;
+
+  h3 {
+    margin: 0;
+    margin-top: 1rem;
+  }
+
+  img {
+    border: 2px solid $image-border-color;
+    margin: auto;
+  }
+}
+
+.italicspan {
+  font-style: italic;
 }
