--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -8,5 +8,9 @@
         {% include 'includes/form.html' %}
         <button type="submit" class="form_button">Luo käyttäjätunnus</button>
     </form>
+    <a href="#" class="reginstructionlink">Mikä on rekisteröintiavain?</a>
+    <div class="reginstructions">Rekisteröintiavain on ns. yleien salasana,
+        jonka tarvitset voidaksesi rekisteröityä sivulle.
+        Avain on kerrottuna pikkusoikankielisissä, tai saat kysymällä kyläyhdistykseltä.</div>
     </div>
 {% endblock %}
