--- a/static/css/_tinymce.scss
+++ b/static/css/_tinymce.scss
@@ -1,7 +1,7 @@
 .tinymce_div {
   max-width: 100vw;
   margin: 0px;
-  padding: 20px;
+  padding: 0px;
   img {
     max-width: 100%;
   }
@@ -12,5 +12,9 @@
 
   p:empty {
     display: none;
+  }
+
+  ul {
+    padding-left: 20px;
   }
 }
