--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,7 +50,7 @@ html, body, ul, ol {
   /*home link hover*/
   .logo_container:hover {
     opacity: 1;
-    transform: rotate(5deg); }
+    transform: rotate(3deg); }
 
   /*hide hamburger*/
   .nav_button_div {
@@ -81,6 +81,10 @@ html, body, ul, ol {
     transition: background-color 0.2s ease-in-out; }
     .link_div:hover a {
       text-shadow: 2px 2px 2px #000; }
+    .link_div:hover .inner_link a {
+      text-shadow: 1px 1px 1px #000; }
+    .link_div:hover .inner_link:hover a {
+      text-shadow: 2px 2px 2px #000; }
 
   .inner_link_container {
     position: absolute;
@@ -90,6 +94,7 @@ html, body, ul, ol {
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    z-index: 2;
     border-radius: 0 0 20px 20px; }
     .inner_link_container a {
       font-size: 1.25rem;
@@ -149,7 +154,8 @@ html, body, ul, ol {
     flex-direction: column;
     max-width: 200px;
     border-radius: 0 5px 15px 0;
-    transition: left 0.8s; }
+    transition: left 0.8s;
+    z-index: 2; }
 
   .link_div:last-of-type {
     border-radius: 0 0 15px 0; }
@@ -170,7 +176,8 @@ html, body, ul, ol {
     max-width: 200px;
     white-space: nowrap;
     overflow: hidden;
-    border-radius: 0 5px 15px 0; }
+    border-radius: 0 5px 15px 0;
+    z-index: 2; }
     .inner_link_container a {
       font-size: 1.05rem;
       padding: 0.4rem 0.5rem; }
@@ -181,9 +188,23 @@ html, body, ul, ol {
 .field_div {
   display: flex;
   flex-direction: column; }
+  .field_div label {
+    margin-top: 0.8rem; }
   .field_div input {
     border-radius: 6px; }
+  .field_div select {
+    border-radius: 6px;
+    width: 100%; }
+  .field_div textarea {
+    height: 30vh;
+    border-radius: 6px;
+    resize: none; }
 
+@media screen and (min-width: 1080px) {
+  .market_form_div {
+    margin: auto;
+    width: 50%;
+    justify-content: center; } }
 .help_text {
   font-size: 12px;
   color: #803526; }
@@ -209,6 +230,12 @@ html, body, ul, ol {
   border-radius: 0.4rem;
   padding: 0.6rem 1rem; }
 
+.reginstructionlink {
+  font-size: 0.8rem; }
+
+.reginstructions {
+  font-size: 0.8rem; }
+
 .images_flex_container {
   display: flex;
   flex-flow: row wrap;
@@ -216,8 +243,8 @@ html, body, ul, ol {
   margin: auto;
   margin-top: 0.3rem;
   align-items: center;
-  width: calc(80% - 10px);
-  padding: 0 5px 5px 5px;
+  width: 100%;
+  padding: 0;
   min-width: 944px;
   max-width: 1300px; }
 
@@ -234,8 +261,9 @@ html, body, ul, ol {
   .image_div img {
     /*prevents image from stretching when using small screen*/
     display: block;
-    max-width: 100%;
+    max-width: 100% !important;
     max-height: 100%;
+    border-bottom: 0.2rem solid #3d4c49;
     width: auto;
     object-fit: contain; }
 
@@ -253,8 +281,9 @@ html, body, ul, ol {
   .image_div_mouseover img {
     /*prevents image from stretching when using small screen*/
     display: block;
-    max-width: 100%;
+    max-width: 100% !important;
     max-height: 100%;
+    border-bottom: 0.2rem solid #3d4c49;
     width: auto;
     object-fit: contain; }
 
@@ -393,18 +422,31 @@ html, body, ul, ol {
 
 /*single page market object container*/
 .market_big_div {
+  text-align: center;
+  justify-content: center;
   margin: auto; }
+  .market_big_div h3 {
+    margin: 0;
+    margin-top: 1rem; }
+  .market_big_div img {
+    border: 2px solid #3d4c49;
+    margin: auto; }
+
+.italicspan {
+  font-style: italic; }
 
 .tinymce_div {
   max-width: 100vw;
   margin: 0px;
-  padding: 20px; }
+  padding: 0px; }
   .tinymce_div img {
     max-width: 100%; }
   .tinymce_div p {
     margin: 0; }
   .tinymce_div p:empty {
     display: none; }
+  .tinymce_div ul {
+    padding-left: 20px; }
 
 #kartta_div {
   height: 1000px; }
@@ -415,6 +457,7 @@ body {
   font-size: 1.25rem; }
 
 .content_div {
+  z-index: 1;
   margin: auto 2rem; }
   .content_div img {
     max-width: 95%;
@@ -430,14 +473,27 @@ body {
     display: block; }
 
   .content_div {
+    position: relative;
     margin: auto;
     margin-bottom: 20px;
-    width: calc(80% - 20px);
+    width: calc(80% - 3rem);
     background-color: rgba(241, 215, 198, 0.55);
-    padding: 0 10px 0 10px;
+    padding: 0.5rem 1.5rem 1rem 1.5rem;
     border-radius: 10px 10px 10px 10px;
     /*ISO EHK├ä */
     min-width: 944px;
-    max-width: 1300px; } }
+    max-width: calc(1300px - 3rem); }
+
+  .datespan {
+    position: absolute;
+    right: 1.5rem;
+    bottom: 1rem;
+    font-size: 0.9rem; }
+
+  .toprightspan {
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+    font-size: 1rem; } }
 
 /*# sourceMappingURL=style.css.map */
