--- a/templates/ajankohtaista.html
+++ b/templates/ajankohtaista.html
@@ -2,6 +2,6 @@
 {% block content %}
     <div class="content_div">
         <div class="tinymce_div">{{ ak.teksti|safe }}</div>
-    <h4>{{ ak.pvm }}</h4>
+    <h4>{{ ak.pvm|date:'d.m.y H:i' }}</h4>
     </div>
 {% endblock %}
