--- a/templates/tapahtuma.html
+++ b/templates/tapahtuma.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="content_div">
     <div class="tinymce_div">{{ tapahtuma.teksti|safe }}</div>
-    <h4>{{ tapahtuma.pvm }}</h4>
+    <h4>{{ tapahtuma.pvm|date:'d.m.y H:i' }}</h4>
     <!--- check if user is authenticated and is (s)he attending the event --->
     {% if user.is_authenticated %}
         <input type="hidden" id="tapahtuma_hidden" value="{{ tapahtuma.pk }}">
@@ -11,9 +11,11 @@
         {% elif user.is_authenticated %}
             <a href="{% url 'tapahtuma_osallistu' tapahtuma_pk=tapahtuma.pk%}"><span>Osallistu</span></a></br>
         {% endif %}
+        <ul>
         {% for os in osallistujat %}
-        <span>{{os.osallistuja.first_name}}</span></br>
+        <li>{{os.osallistuja.first_name}}</li>
         {% endfor %}
+        </ul>
     {% endif %}
 </div>
 {% endblock %}
