--- a/templates/uusi_markkina.html
+++ b/templates/uusi_markkina.html
@@ -1,11 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="market_big_div">
+    <div class="content_div">
+    <div class="market_form_div">
+        <h2>Uusi ilmoitus markkinapaikalle</h2>
         <form method="POST" enctype="multipart/form-data" novalidate>
             {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Luo ilmoitus</button>
+            {% include 'includes/form.html' %}
+            <button type="submit" class="form_button">Luo ilmoitus</button>
         </form>
+    </div>
     </div>
 {%  endblock %}
