--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,5 +1,6 @@
 $bg-color: rgba(195, 211, 208, 0.84);
 $content-bg-color: rgba(241, 215, 198, 0.55);
+$link-color: rgba(21, 21, 21, 0.64);
 
 @import 'reset';
 @import 'navigation';
@@ -18,6 +19,7 @@ body {
 .content_div {
   z-index: 1;
   margin: auto 2rem;
+  padding: 0;
   img {
     max-width: 95%;
     object-fit: contain;
@@ -27,6 +29,43 @@ body {
 .maindiv {
     //margin: auto 2rem;
     margin: 0;
+    padding: 0;
+
+    /*common styles for links*/
+  a {
+    color: $link-color;
+    text-decoration: none;
+  }
+
+  a:visited {
+    color: $link-color;
+    text-decoration: none;
+  }
+
+  a:hover {
+    text-shadow: 1px 1px 1px $link-color;
+  }
+
+}
+
+.paginator_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 180px;
+  height: 40px;
+  margin: auto;
+  margin-bottom: $margin-size;
+  border: 1px solid $image-border-color;
+  border-radius: 4px;
+
+  span {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+  a {
+    font-size: 1rem;
+  }
 }
 
 /*desktop*/
