--- a/templates/all_ajankohtaista.html
+++ b/templates/all_ajankohtaista.html
@@ -6,18 +6,20 @@
         <ul>
             <li><span style="font-weight: bold"><a href="{% url 'ajankohtaista' ak_pk=ak.pk %}">{{ ak.otsikko }}</a></span>
                <small>{{ ak.kuvaus }}</small>
-               <small>{{ ak.pvm }}</small>
+               <small class="italicspan">{{ ak.pvm|date:'d.m.y H:i' }}</small>
             </li>
         </ul>
     {% endfor %}
+{%  if all_ak.has_other_pages %}
     <div class="paginator_container">
         {%  if all_ak.has_previous %}
-            <a href="?sivu={{ all_ak.previous_page_number }}">Edellinen sivu</a>
+            <a href="?sivu={{ all_ak.previous_page_number }}"><<</a>
         {% endif %}
         <span class="current_page">{{ all_ak.number }} / {{ all_ak.paginator.num_pages }}</span>
         {%  if all_ak.has_next %}
-            <a href="?sivu={{ all_ak.next_page_number }}">Seuraava sivu</a>
+            <a href="?sivu={{ all_ak.next_page_number }}">>></a>
         {% endif %}
     </div>
+{% endif %}
 </div>
 {% endblock %}
