--- a/templates/all_markkina.html
+++ b/templates/all_markkina.html
@@ -9,10 +9,9 @@
         <a href="{% url 'markkina' ilmoitus_pk=ilmo.pk %}">
         <div class="market_div">
             <h3>{{ ilmo.otsikko }}</h3>
-            <span>{{ ilmo.get_ilmoitustyyppi_display }}</span>
+            <span class="italicspan">{{ ilmo.get_ilmoitustyyppi_display }}</span>
             <span>{{ ilmo.pvm|date:'d.m.y H:i' }}</span>
             <img src="{{ ilmo.thumbnail.url }}" id="{{ ilmo.pk }}">
-            <span>{{ ilmo.teksti }}</span>
             <span>{{ ilmo.ilmoittaja }}</span>
         </div>
         </a>
