--- a/templates/kartta.html
+++ b/templates/kartta.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+    <!--
     <link rel="stylesheet" href="{% static 'css/leaflet.css' %}">
     <script type="text/javascript" src="{% static 'js/leaflet.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/kartta.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/kartta.js' %}"></script> -->
     <div class="content_div">
         <div id="kartta_div">
-            <h1>tähä kartta</h1>
+            <h3>Kartta kylästä tulossa myöhemmin.</h3>
         </div>
     </div>
 {% endblock %}
