--- a/templates/kylalaisetindex.html
+++ b/templates/kylalaisetindex.html
@@ -2,13 +2,15 @@
 {% block content %}
     <div class="content_div">
         <div class="kylalink_div">
-            <a href=""><h2>Keskustelualue</h2></a>
+            <a href="{%  url 'kylalaistiedote' %}"><h3>Tiedotteet kyläläisille</h3></a>
         </div>
         <div class="kylalink_div">
-            <a href="{% url 'markkina' %}"><h2>Markkinapaikka</h2></a>
+            <a href="{% url 'markkina' %}"><h3>Markkinapaikka</h3></a>
         </div>
-         <div class="kylalink_div">
-             <a href="{% url 'kayttaja' %}"><h2>Oma profiili</h2></a>
+        <div class="kylalink_div">
+             <a href="{% url 'kayttaja' %}"><h3>Oma profiili</h3></a></div>
+        <div class="kylalink_div">
+             <a href="{% url 'log_out' %}"><h3>Kirjaudu ulos</h3></a>
          </div>
     </div>
 {% endblock content %}
